// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`use case card should render use case card component for observability 1`] = `
<EuiCard
  betaBadgeProps={
    Object {
      "label": "observe",
    }
  }
  description={
    <EuiText
      color="subdued"
      size="xs"
    >
      <p>
        testDescription
      </p>
    </EuiText>
  }
  display="subdued"
  footer={
    <span>
      testFooter
    </span>
  }
  image={
    <EuiImage
      alt="Observability logo"
      src="/plugins/home/assets/solution_logos/observability.png"
    />
  }
  textAlign="left"
  title={
    <EuiTitle
      size="xs"
    >
      <h4>
        <strong>
          testTitle
        </strong>
      </h4>
    </EuiTitle>
  }
/>
`;

exports[`use case card should render use case card component for search 1`] = `
<EuiCard
  betaBadgeProps={
    Object {
      "label": "search",
    }
  }
  description={
    <EuiText
      color="subdued"
      size="xs"
    >
      <p>
        testDescription
      </p>
    </EuiText>
  }
  display="subdued"
  footer={
    <span>
      testFooter
    </span>
  }
  image={
    <EuiImage
      alt="Enterprise Search logo"
      src="/plugins/home/assets/solution_logos/search.png"
    />
  }
  textAlign="left"
  title={
    <EuiTitle
      size="xs"
    >
      <h4>
        <strong>
          testTitle
        </strong>
      </h4>
    </EuiTitle>
  }
/>
`;

exports[`use case card should render use case card component for security 1`] = `
<EuiCard
  betaBadgeProps={
    Object {
      "label": "security",
    }
  }
  description={
    <EuiText
      color="subdued"
      size="xs"
    >
      <p>
        testDescription
      </p>
    </EuiText>
  }
  display="subdued"
  footer={
    <span>
      testFooter
    </span>
  }
  image={
    <EuiImage
      alt="Security logo"
      src="/plugins/home/assets/solution_logos/security.png"
    />
  }
  textAlign="left"
  title={
    <EuiTitle
      size="xs"
    >
      <h4>
        <strong>
          testTitle
        </strong>
      </h4>
    </EuiTitle>
  }
/>
`;
